finished generic repository

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=DigitalExpress.db"
-  }
+    "DefaultConnection": "Data Source=DigitalExpress.db"
+  },
+  "ApiUrl": "https//localhost:5001/"
 }
