fixed product names inside api, fixed PictureURL link

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DigitalExpress.db"
   },
-  "ApiUrl": "https//localhost:5001/"
+  "ApiUrl": "https://localhost:5001/"
 }
